# api/v1/cluster_manager_server.swagger.json
@@ -68,6 +68,148 @@
         ]
       }
     },
+    "/v1/clusters/{clusterId}/config": {
+      "get": {
+        "operationId": "ClustersService_GetClusterConfig",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ClusterConfig"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "clusterId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ClustersService"
+        ]
+      },
+      "delete": {
+        "operationId": "ClustersService_DeleteClusterConfig",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "clusterId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ClustersService"
+        ]
+      },
+      "post": {
+        "operationId": "ClustersService_CreateClusterConfig",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ClusterConfig"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "clusterId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "dummy": {
+                  "type": "string",
+                  "title": "TODO(kenji): Add fields"
+                }
+              }
+            }
+          }
+        ],
+        "tags": [
+          "ClustersService"
+        ]
+      },
+      "patch": {
+        "operationId": "ClustersService_UpdateClusterConfig",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ClusterConfig"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "clusterId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "dummy": {
+                  "type": "string",
+                  "title": "TODO(kenji): Add fields"
+                }
+              }
+            }
+          }
+        ],
+        "tags": [
+          "ClustersService"
+        ]
+      }
+    },
     "/v1/clusters/{id}": {
       "get": {
         "operationId": "ClustersService_GetCluster",
@@ -179,6 +321,9 @@
           "description": "components_statuses is keyed by component name."
         }
       }
+    },
+    "v1ClusterConfig": {
+      "type": "object"
     },
     "v1ComponentStatus": {
       "type": "object",
